Move markdown to a separate module (#215)